--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<post-list [posts]="posts"></post-list>
+<app-header></app-header>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
