--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -4,16 +4,20 @@
     'list-group-item-success': post.loveIts >= 0,
     'list-group-item-danger': post.loveIts < 0
   }"
+  style="padding-bottom: 2vh;"
 >
   <h4 [ngStyle]="{ color: getColor() }">{{ post.title }}</h4>
   <p>{{ post.created_at | date }}</p>
   <p>{{ post.content }}</p>
-  <button class="btn btn-success" (click)="addLoveIt()">
+  <button class="btn btn-success" (click)="onAddLoveIts(post)">
     Love it</button
-  ><button class="btn btn-danger" (click)="removeLoveIt()">
+  ><button class="btn btn-danger" (click)="OnremoveLoveIts(post)">
     Love it
   </button>
-  <div>
-    <p>Number of Love It : {{ post.loveIts }}</p>
+  <div class="list-group">
+    <p class="list-group-item-text">Number of Love It : {{ post.loveIts }}</p>
+    <button class="btn btn-danger pull-right" (click)="onDeletePost(post)">
+      Supprimer
+    </button>
   </div>
 </li>
